[package]

name = "pong"
version = "0.1.0"
authors = [
    "Paweł Zając <pavlzayac@gmail.com>"
]

[[bin]]
name = "pong"

[dependencies]
piston = "0.53.0"
piston2d-graphics = "0.43.0"
pistoncore-glutin_window = "0.71.0"
piston2d-opengl_graphics = "0.82.0"
parry2d-f64 = "0.13.5"
rust-embed = "6.8.1"
piston_window = "0.128.0"
rusttype = "0.9.3"

